# vito2mqtt

./: .copier-answers.yml  .dockerignore  .editorconfig  .editorconfig-checker.json  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Taskfile.yml  codecov.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  release-please-config.json  renovate.json  zensical.toml
.beads/: .gitignore  README.md  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-start.sh
.github/: copilot-instructions.md  pull_request_template.md
.github/agents/: code-review-subagent.agent.md  orchestrator.agent.md  researcher-subagent.agent.md
.github/instructions/: documentation.instructions.md  licensing.instructions.md  testing-python.instructions.md  tooling.instructions.md  workflow.instructions.md
.github/prompts/: pr-review.prompt.md  showboat-demo.prompt.md  showboat-walkthrough.prompt.md
.github/skills/pre-pr-gate/: SKILL.md
.github/skills/showboat-demo/: SKILL.md
.github/workflows/: ci.yml  devcontainer-build.yml  docker.yml  docs.yml  release-please.yml
docs/: index.md
docs/adr/: ADR-001-framework-choice.md  ADR-002-mqtt-topic-layout.md  ADR-003-hardware-abstraction.md  ADR-004-optolink-protocol-design.md  ADR-005-configuration-settings.md  ADR-006-configurable-signal-language.md  ADR-007-telemetry-coalescing-groups.md  index.md
docs/getting-started/: index.md
docs/guides/: index.md
docs/planning/: adapter-session-optimization-evaluation.md  coalescing-groups-framework-requirements.md  command-handlers-design.md  cosalette-mockable-sleep-request.md  recreation-plan.md  telemetry-session-coalescing.md
docs/planning/log/: adapter-layer-settings-errors-port-complete.md  adrs-phase0-complete.md  cli-help-without-env-complete.md  coalescing-groups-integration-complete.md  documentation-site-complete.md  legionella-config-wiring-complete.md  legionella-heating-window-check-complete.md  protocol-layer-command-registry-complete.md  telemetry-devices-signal-groups-complete.md
docs/reference/: configuration.md  docker-deployment.md  signals.md
docs/testing/: test-file-template.md
scripts/: add_gpl_headers.py  ci-wait.sh  plan-interactive.sh  plan-overview.sh  plan-preview.sh  plan-task-preview.sh  update-precommit.sh  update_version.py
